CommandLimit 1.2.2 Rebrand to CommandLimit RSF: Update to 1.6.3

--- a/src/main/resources/Configs/Limit.yml
+++ b/src/main/resources/Configs/Limit.yml
@@ -1,8 +1,8 @@
-# rscl.default (기본적으로 활성화됨)
-# rscl.default (Enabled by default)
+# cmdlimit.default (기본적으로 활성화됨)
+# cmdlimit.default (Enabled by default)
 default:
   - help
-#rscl.worldedit
+#cmdlimit.worldedit
 worldedit:
   - /wand
   - /copy
